@@ -1,5 +1,13 @@
 2012-01-08  Murray Cumming  <murrayc@murrayc.com>
 
+	Export to po file: Improve the msgtxt hints more.
+
+	* glom/libglom/document/document.cc: fill_translatable_layout_items():
+	Mention the parent groups in the hints, t omake them more unique.
+	* tests/translations_po/data/test.po: Resaved.
+
+2012-01-08  Murray Cumming  <murrayc@murrayc.com>
+
 	Export to po file: Improve the msgtxt hints.
 
 	* glom/libglom/data_structure/translatable_item.[h|cc]: 
